--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navbar-nav">
             <a href="#home">Home</a>
             <a href="#about">Tentang kami</a>
-            <a href="">Jasa</a>
+            <a href="#service">Layanan</a>
             <a href="">Kontak</a>
         </div>
         <div class="navbar-extra">
@@ -57,8 +57,29 @@
             </div>
         </div>
     </section>
-
     <!-- about sec end -->
+    <!-- service sec -->
+    <section class="service" id="service">
+        <h2>Layanan</h2>
+        <div class="row">
+            <div>
+                <img src="img/groom.jpg" alt="">
+                <h3><span>Grooming</span> Hewan</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis rerum vel est, facere reprehende Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate suscipit accusantium nulla maxime temporibus explicabo? Amet officiis earum fuga u rit corporis.</p>
+            </div>
+            <div>
+                <img src="img/housedog.jpg" alt="">
+                <h3><span>Penitipan</span> Hewan</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis rerum vel est, facere reprehende Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate suscipit accusantium nulla maxime temporibus explicabo? Amet officiis earum fuga u rit corporis.</p>
+            </div>
+            <div>
+                <img src="img/train.jpg" alt="">
+                <h3><span>Pelatihan</span> Hewan</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis rerum vel est, facere reprehende Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate suscipit accusantium nulla maxime temporibus explicabo? Amet officiis earum fuga u rit corporis.</p>
+            </div>
+        </div>
+    </section>
+    <!-- service sec end -->
 
     <script>feather.replace();</script>
     <script src="script.js"></script>
